src/test/testData/parser/good/FlowRepeat.basic
Repeat A>3
    2->A
    Repeat Ans
        getKey
    End
    Disp A