src/test/testData/parser/bad/FlowRepeat.basic
Repeat
    2->A
    Repeat A=2,
        3->A
    End